2006-02-20  Roger Leigh  <rleigh@debian.org>

	* po/Makevars (XGETTEXT_OPTIONS): Add --boost so boost-format
	strings are correctly extracted.

2006-02-18  Roger Leigh  <rleigh@debian.org>

	* Updated sv.po and vi.po from the Free Translation Project.

2006-02-18  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-chroot-config.h: Fix include guard naming.

	* schroot/sbuild-chroot-config.cc (add): New overloaded protected
	method to add a chroot, including checking for duplicates.  Split
	out from parse_data.

2006-02-17  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-chroot-config.cc: Update tests.

	* schroot/schroot.cc
	(main): Use new chroot_config typedef, and use chroot_config::add
	instead of add_config_file and add_config_directory.

	* schroot/sbuild-chroot-config.h
	(ptr): New typedef for a shared_ptr to a chroot_config.
	(add_config_file: Now private.
	(add_config_directory): Now private.

	* schroot/sbuild-chroot-config.cc
	(add): New method.  This replaces the file/directory detection in
	the constructor, and then calls add_config_file or
	add_config_directory as required.
	(load_data): New function, renamed from load.
	(parse_data): New virtual function, called from load_data.  This
	parses the loaded data, and is split out from load.

2006-02-16  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.cc (main): If --quiet is specified, don't log an
	error if the session fails.  A non-zero exit status is still
	returned.

2006-02-16  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.cc (run_child): If it is not possible to
	change into the correct directory inside the chroot, print a
	warning rather than an error.

2006-02-07  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 0.2.3.

	* debian/control (Build-Depends): Add pkg-config build dependency.

	* NEWS: Bump version to 0.2.3.

	* configure.ac: Bump version to 0.2.3.

2006-02-07  Roger Leigh  <rleigh@debian.org>
